fix: clicking thumbnails

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/app.css">
-  <link rel="stylesheet" href="css/animations.css">
+  <!-- <link rel="stylesheet" href="css/animations.css"> -->
 
   <script src="node_modules/angular/angular.js"></script>
   <script src="node_modules/router/node_modules/traceur/bin/traceur-runtime.js"></script>
