--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
 
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/app.css">
-  <!-- <link rel="stylesheet" href="css/animations.css"> -->
+  <link rel="stylesheet" href="css/animations.css">
 
   <script src="node_modules/angular/angular.js"></script>
   <script src="node_modules/angular-new-router/node_modules/traceur/bin/traceur-runtime.js"></script>
   <script src="node_modules/angular-new-router/dist/router.es5.js"></script>
   <script src="node_modules/angular-new-router/src/router-directive.es5.js"></script>
+  <script src="node_modules/angular-animate/angular-animate.js"></script>
   <script src="node_modules/angular-resource/angular-resource.js"></script>
 
   <script src="components/app/app.js"></script>
